<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="22dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_centerHorizontal="true"
            />

    </RelativeLayout>


    <EditText android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:textSize="22dp"
        android:hint="Email"
        android:paddingLeft="8dp"
        android:textCursorDrawable="@null"
        android:textColor="#FAFAFA"
        android:backgroundTint="#FAFAFA"
        android:textColorHint="#FAFAFA"
        android:inputType="textEmailAddress" />





    <EditText android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:textSize="22dp"
        android:hint="Password"
        android:paddingLeft="8dp"
        android:textCursorDrawable="@null"
        android:textColor="#FAFAFA"
        android:backgroundTint="#FAFAFA"
        android:textColorHint="#FAFAFA"
        android:inputType="textPassword" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="LOGIN"
            android:paddingTop="22dp"
            android:paddingBottom="22dp"
            android:minWidth="200dp"
            android:backgroundTint="@color/button_dark"
            android:textColor="#FAFAFA"
            android:layout_centerHorizontal="true"
            />

        <Button android:id="@+id/createaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="Create Account"
            android:paddingTop="22dp"
            android:paddingBottom="22dp"
            android:minWidth="200dp"
            android:backgroundTint="@color/button_dark"
            android:textColor="#FAFAFA"
            android:layout_below="@id/login"
            android:layout_centerHorizontal="true"
            />



    </RelativeLayout>


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button android:id="@+id/forgotpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="FORGOT PASSWORD"
            android:textColor="@android:color/secondary_text_light"
            android:minWidth="200dp"
            android:paddingTop="22dp"
            android:paddingBottom="22dp"
            style="?android:borderlessButtonStyle"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"

            />

        <Button android:id="@+id/attribution"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="Attribution"
            android:textSize="8dp"
            android:textColor="@android:color/secondary_text_light_nodisable"
            style="?attr/borderlessButtonStyle"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            />

    </RelativeLayout>

</LinearLayout>